feat: 🎸 Criado documentacao de criacao de especificacao
Criado documentacao de criacao de especificacao
